# leia

./: .gitignore  Cargo.toml  imgui.ini
assets/: cornell.glb  cornell_light.glb  plane.glb
src/: application.rs  bvh.rs  camera.rs  hittable.rs  hittable_list.rs  imgui_dock.rs  input.rs  main.rs  mesh.rs  onb.rs  ray.rs  renderer.rs  rng.rs  thread_pool.rs  triangle.rs  util.rs  vec3.rs
