[package]
name = "leia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
easy-gltf = "0.1.5"
glam = "0.21"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.6.1"
vulkano = "0.32.3"
vulkano-win = "0.32.0"
vulkano-shaders = "0.32.0"
winit = "0.27.5"
imgui = {version = "0.9", features = ["docking"]}
imgui-vulkano-renderer={git="https://github.com/LeonMatthes/imgui-vulkano-renderer.git", tag="0.9.0"}
imgui-winit-support = "0.9.0"
bytemuck = "1.12.1"

[profile.dev]
opt-level = 1

[profile.release]
debug = 1 # Enable source line debug info for profiling